[TW#16875052] Fix spacing issues

--- a/styles/scss/shell/_ins-breadcrumbs.scss
+++ b/styles/scss/shell/_ins-breadcrumbs.scss
@@ -1,6 +1,6 @@
 .ins-breadcrumbs {
   position: absolute;
-  top: 94px;
+  top: 106px;
   right: 20px;
 
   ul {
