--- a/styles/scss/shell/_ins-renderer.scss
+++ b/styles/scss/shell/_ins-renderer.scss
@@ -15,7 +15,11 @@
       width: 100%;
       margin-left: 0;
     }
+  }
 
+  .ins-renderer__slot-wrap {
+    padding-right: 20px;
+    padding-bottom: 40px;
   }
 
   .ins-renderer__iframe-wrap {
@@ -59,10 +63,6 @@
 
 body {
   background: #fafbfc;
-}
-
-.hide-slot {
-  display: none;
 }
 
 @media only screen and (max-width: 320px) {
